NXP-27139: Take into account OrphanVersionRemovalFilter contribution